edited some CSS properties to make page responsive

--- a/css/master.css
+++ b/css/master.css
@@ -241,12 +241,12 @@ body {
 
 @media(max-width: 640px){
     .name{
-        transform: translateX(40px);
+        transform: translateX(38px);
     }
 
     .header-right-side{
         transform: translateX(-30px);
-    }    
+    } 
 }
 
 /* ----------------------------------------------------------------------------------------------------------------------- */
@@ -271,7 +271,6 @@ body {
     height: 97px;
     border: none;
     border-radius: 50%; 
-    object-fit: cover;
 }
 
 .halo{
@@ -410,7 +409,7 @@ body {
     white-space: nowrap;
     padding: 4px;
     pointer-events: none;
-    margin-right: 5px;
+    margin: 3px 5px 3px 0;
     background-color: var(--global-bg);
     color: var(--global-text);
     border-radius: 5px;
@@ -624,7 +623,7 @@ body {
 
 @media(max-width: 400px){
     .projects_container{
-        width: 85%;
+        width: 88%;
     }
 
     .js_project{
@@ -710,6 +709,7 @@ body {
     border-radius: 10px;
     margin-bottom: 3rem;
     width: 42rem;
+    max-width: 90%;
     color: var(--global-text);
 }
 
@@ -770,14 +770,13 @@ footer{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin-bottom: 3rem;
     width: auto;
+    font-family: inherit;
 }
 
-.copyright_text{
-    margin-right: 0.25rem;
-}
+
 
 @media(max-width: 550px){
     footer{
